--- a/package.json
+++ b/package.json
@@ -49,6 +49,8 @@
     "@nomiclabs/hardhat-etherscan": "^3.1.7",
     "@openzeppelin/contracts": "^4.8.0",
     "@openzeppelin/contracts-upgradeable": "^4.8.0",
+    "@uniswap/v2-core": "^1.0.1",
+    "@uniswap/v3-core": "^1.0.1",
     "chai": "^4.3.8",
     "dotenv": "^16.0.3",
     "keccak256": "^1.0.6",
